--- a/Projekt/pages/home.html
+++ b/Projekt/pages/home.html
@@ -63,104 +63,43 @@
       <div class="content">
         <div class="liquidGif">
           <img src="../assets/gif-image.gif" />
-          <p>There is some thing from the internetz</p>
+          <p>Representation of gold particles</p>
         </div>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac
-          lectus et sapien dictum tincidunt quis nec augue. Vivamus pharetra
-          dui ac enim semper ultricies. Duis tristique odio ultricies arcu
-          tristique, ac efficitur erat tincidunt. Nunc venenatis ac ligula
-          aliquam malesuada. Nulla tincidunt hendrerit tincidunt.
-          Pellentesque habitant morbi tristique senectus et netus et
-          malesuada fames ac turpis egestas. Nulla non eros arcu. Sed
-          interdum est non enim consectetur convallis. Suspendisse sagittis
-          imperdiet velit, ac varius nisi. Proin congue orci nec nisi
-          tempor, at commodo leo tristique. Morbi vel est quis lacus
-          vulputate volutpat.
+          Gold is one of the first metals to have been discovered; the history of its study and application spans at least several thousand years. 
+          The first data on colloidal gold can be found in treatises by Chinese, Arabian, and Indian scientists, who managed to obtain colloidal gold as early as in the V–IV centuries BC. 
+          They utilized it for medicinal purposes (Chinese “golden solution” and Indian “liquid gold”), amongst other uses. In Europe during the Middle Ages, colloidal gold was studied and used in alchemist laboratories. 
+          Paracelsus wrote about the therapeutic properties of gold quintessence — “ quinta essentia auri, ” which he obtained via the reduction of gold chloride by vegetable extracts in alcohols or oils. 
+          He used the “potable gold” for the treatment of a number of mental diseases and syphilis. His contemporary, Giovanni Andrea, used “ aurum potabile ” as a therapy for patients with leprosy, 
+          plague, epilepsy, and diarrhea. In 1583, the alchemist David de Planis-Campy, who served as doctor to Louis XIII of France, recommended his “longevity elixir,” a colloidal solution of gold in water. 
+          The first book on colloidal gold preserved to our days was published in 1618 by the philosopher and doctor of medicine Francisco Antonii. It contains data on how to obtain colloidal 
+          gold and its application in medicine, including practical advice. 
         </p>
         <p>
-          Nunc porttitor, sem quis interdum condimentum, diam arcu varius
-          nisl, in lacinia augue nisi tincidunt neque. Sed a mauris lacus.
-          Nulla facilisi. Aliquam venenatis sapien nisl, ut placerat ipsum
-          laoreet tristique. Aenean enim elit, pulvinar a ipsum non,
-          fringilla viverra sapien. In hendrerit quis sapien id commodo.
-          Orci varius natoque penatibus et magnis dis parturient montes,
-          nascetur ridiculus mus. Vivamus sagittis tempor nibh, venenatis
-          viverra tortor semper sed. Suspendisse potenti. Proin dui mi,
-          varius convallis risus vitae, lobortis dapibus ex. Suspendisse
-          luctus metus hendrerit felis iaculis varius. Orci varius natoque
-          penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-          Duis arcu orci, tempus vitae pharetra semper, ultricies quis
-          tellus. Cras commodo ultrices egestas. Maecenas a rhoncus nibh.
-          Suspendisse ante arcu, egestas in malesuada convallis, tristique
-          et ex. Aenean sodales varius lacinia. Vestibulum finibus tristique
-          libero, in suscipit ante iaculis nec. Curabitur faucibus ligula
-          sit amet aliquet ultrices. Donec eget mauris quis lacus eleifend
-          aliquam. Quisque quis nulla eget leo efficitur faucibus et in
-          massa. Cras ultrices feugiat urna.
-        </p>
-
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac
-          lectus et sapien dictum tincidunt quis nec augue. Vivamus pharetra
-          dui ac enim semper ultricies. Duis tristique odio ultricies arcu
-          tristique, ac efficitur erat tincidunt. Nunc venenatis ac ligula
-          aliquam malesuada. Nulla tincidunt hendrerit tincidunt.
-          Pellentesque habitant morbi tristique senectus et netus et
-          malesuada fames ac turpis egestas. Nulla non eros arcu. Sed
-          interdum est non enim consectetur convallis. Suspendisse sagittis
-          imperdiet velit, ac varius nisi. Proin congue orci nec nisi
-          tempor, at commodo leo tristique. Morbi vel est quis lacus
-          vulputate volutpat. Sed et metus et diam maximus elementum. Aenean
-          egestas orci id porttitor porttitor. Integer eu mattis metus.
-          Vestibulum pharetra non lorem pulvinar auctor. Quisque metus
-          tortor, pharetra vitae consectetur a, vestibulum et ligula. Nulla
-          nec ante eget sem blandit finibus. Sed eu libero ut dui molestie
-          semper in ac tortor. Morbi ac velit eu purus convallis congue et
-          vel risus. Cras at nunc finibus, euismod erat vel, pulvinar
-          ligula. Aenean quis arcu massa.
+          Despite its centuries-old history, the “revolution in immunochemistry” associated with the use of gold nanoparticles (GNP) in biological studies occurred only in 1971, 
+          when the British researchers Faulk and Taylor described a method of antibody conjugation with colloidal gold for direct electron microscopy 
+          visualization of the surface antigens of salmonellae. The study was initiated using biospecific 
+          markers – colloidal gold conjugated with immunoglobulins and other molecules – in different spheres of biology and medicine. Over the past 40 years, 
+          there have been many studies devoted to the application of functionalized nanoparticles – conjugates with recognizing biomacromolecules (antibodies, lectins, enzymes, aptamers, etc.) – 
+          in biochemistry, microbiology, immunology, cytology, plant physiology, morphology, etc.  
         </p>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac
-          lectus et sapien dictum tincidunt quis nec augue. Vivamus pharetra
-          dui ac enim semper ultricies. Duis tristique odio ultricies arcu
-          tristique, ac efficitur erat tincidunt. Nunc venenatis ac ligula
-          aliquam malesuada. Nulla tincidunt hendrerit tincidunt.
-          Pellentesque habitant morbi tristique senectus et netus et
-          malesuada fames ac turpis egestas. Nulla non eros arcu. Sed
-          interdum est non enim consectetur convallis. Suspendisse sagittis
-          imperdiet velit, ac varius nisi. Proin congue orci nec nisi
-          tempor, at commodo leo tristique. Morbi vel est quis lacus
-          vulputate volutpat. Sed et metus et diam maximus elementum. Aenean
-          egestas orci id porttitor porttitor. Integer eu mattis metus.
-          Vestibulum pharetra non lorem pulvinar auctor. Quisque metus
-          tortor, pharetra vitae consectetur a, vestibulum et ligula. Nulla
-          nec ante eget sem blandit finibus. Sed eu libero ut dui molestie
-          semper in ac tortor. Morbi ac velit eu purus convallis congue et
-          vel risus. Cras at nunc finibus, euismod erat vel, pulvinar
-          ligula. Aenean quis arcu massa.
+          The range of GNP use in modern medical and biology studies is extremely wide. In particular, it comprises genomics, biosensorics, immunoanalysis, clinical chemistry, 
+          detection and photothermolysis of microorganisms and cancer cells; the targeted delivery of drugs, DNA and antigens; optical bioimaging and the monitoring of cells and 
+          tissues using modern registration systems. It has been argued that gold nanoparticles could be used in almost all medical applications: diagnostics, therapy, prevention, and hygiene. 
+          A wealth of information on how to obtain and use colloidal gold in biology and medicine, as well as how it functions, can be found in books and reviews. The broad range of 
+          applications for GNP is based on their unique physical and chemical properties. In particular, the optical properties of GNP are determined by their plasmon resonance, 
+          which is associated with the collective excitation of conduction electrons and localized in the broad region, from the visible to the infrared (IR) region, depending on the particle 
+          size, shape, and structure. 
         </p>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac
-          lectus et sapien dictum tincidunt quis nec augue. Vivamus pharetra
-          dui ac enim semper ultricies. Duis tristique odio ultricies arcu
-          tristique, ac efficitur erat tincidunt. Nunc venenatis ac ligula
-          aliquam malesuada. Nulla tincidunt hendrerit tincidunt.
-          Pellentesque habitant morbi tristique senectus et netus et
-          malesuada fames ac turpis egestas. Nulla non eros arcu. Sed
-          interdum est non enim consectetur convallis. Suspendisse sagittis
-          imperdiet velit, ac varius nisi. Proin congue orci nec nisi
-          tempor, at commodo leo tristique. Morbi vel est quis lacus
-          vulputate volutpat. Sed et metus et diam maximus elementum. Aenean
-          egestas orci id porttitor porttitor. Integer eu mattis metus.
-          Vestibulum pharetra non lorem pulvinar auctor. Quisque metus
-          tortor, pharetra vitae consectetur a, vestibulum et ligula. Nulla
-          nec ante eget sem blandit finibus. Sed eu libero ut dui molestie
-          semper in ac tortor. Morbi ac velit eu purus convallis congue et
-          vel risus. Cras at nunc finibus, euismod erat vel, pulvinar
-          ligula. Aenean quis arcu massa.
+          Taking into account the large volume of data published and the high speed at which they are updated, 
+          our review aimed to generalize the results obtained over the past several years in the most promising directions in the use of GNP in modern medical and biological studies. 
         </p>
-    </div>
+        <div class="anchor-tag">
+          <h4> <strong>Source: </strong> <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3347577/" target="_blank"> Gold Nanoparticles in Biology and Medicine: Recent Advances and Prospects </a></h4>
+        </div>
+      </div>
     <div class="gradient"></div>
     <!----------------------->
     <!--------Footer--------->
