changed all the lorem ipsum

--- a/Projekt/news-pages/news-2.html
+++ b/Projekt/news-pages/news-2.html
@@ -65,50 +65,43 @@
       <div class="news-content">
           <div class="news-picture">
             <img src="../assets/news-gifs/news-1.gif" />
-            <p>This is a description</p>
+            <p>This is a gold gif</p>
           </div>
           <div class="news-picture">
             <img src="../assets/news-gifs/news-2.gif" />
-            <p>This is a description</p>
+            <p>This is another gold gif</p>
           </div>
       </div>
 
-      <h2>News from the world 2</h2>  
+      <h2>Differentiating right- and left-handed particles using the force exerted by light</h2>  
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac
-        lectus et sapien dictum tincidunt quis nec augue. Vivamus pharetra
-        dui ac enim semper ultricies. Duis tristique odio ultricies arcu
-        tristique, ac efficitur erat tincidunt. Nunc venenatis ac ligula
-        aliquam malesuada. Nulla tincidunt hendrerit tincidunt.
-        Pellentesque habitant morbi tristique senectus et netus et
-        malesuada fames ac turpis egestas. Nulla non eros arcu. Sed
-        interdum est non enim consectetur convallis. Suspendisse sagittis
-        imperdiet velit, ac varius nisi. Proin congue orci nec nisi
-        tempor, at commodo leo tristique. Morbi vel est quis lacus
-        vulputate volutpat.
+        Researchers investigated the polarization-dependence of the force exerted by circularly 
+        polarized light (CPL) by performing optical trapping of chiral nanoparticles. They found
+         that left- and right-handed CPL exerted different strengths of the optical gradient force 
+         on the nanoparticles, and the D- and L-form particles are subject to different 
+         gradient force by CPL. The present results suggest that separation of materials 
+         according to their handedness of chirality can be realized by the optical force.
       </p>
       <p>
-        Nunc porttitor, sem quis interdum condimentum, diam arcu varius
-        nisl, in lacinia augue nisi tincidunt neque. Sed a mauris lacus.
-        Nulla facilisi. Aliquam venenatis sapien nisl, ut placerat ipsum
-        laoreet tristique. Aenean enim elit, pulvinar a ipsum non,
-        fringilla viverra sapien. In hendrerit quis sapien id commodo.
-        Orci varius natoque penatibus et magnis dis parturient montes,
-        nascetur ridiculus mus. Vivamus sagittis tempor nibh, venenatis
-        viverra tortor semper sed. Suspendisse potenti. Proin dui mi,
-        varius convallis risus vitae, lobortis dapibus ex. Suspendisse
-        luctus metus hendrerit felis iaculis varius. Orci varius natoque
-        penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-        Duis arcu orci, tempus vitae pharetra semper, ultricies quis
-        tellus. Cras commodo ultrices egestas. Maecenas a rhoncus nibh.
-        Suspendisse ante arcu, egestas in malesuada convallis, tristique
-        et ex. Aenean sodales varius lacinia. Vestibulum finibus tristique
-        libero, in suscipit ante iaculis nec. Curabitur faucibus ligula
-        sit amet aliquet ultrices. Donec eget mauris quis lacus eleifend
-        aliquam. Quisque quis nulla eget leo efficitur faucibus et in
-        massa. Cras ultrices feugiat urna.
+        Chirality is the property that the structure is not superimposable on its mirrored image. 
+        Chiral materials exhibit the characteristic feature that they respond differently to left- 
+        and right-circularly polarized light. When matter is irradiated with strong laser light, 
+        optical force is exerted on it. It has been expected theoretically that the optical force 
+        exerted on chiral materials by left- and right-circularly polarized light would also be different.
       </p>
-      <h4> Source: <a href="../index.html">  Liquid Solutions </a></h4>
+      <p>
+        The research group at Institute for Molecular Science and three other universities 
+        used an experimental technique of optical trapping to observe the circular-polarization 
+        dependent optical gradient force exerted on chiral gold nanoparticles. Chiral gold 
+        nanoparticles have either D-form (right-handed) or L-form (left-handed) structure, 
+        and the experiment was performed using both.
+        Although the optical gradient force acting on chiral nanoparticles was predicted theoretically, 
+        no observation of the force has been reported before. The research group succeeded 
+        in observing the optical gradient force originating from the chirality (i.e., 
+        the difference between the gradient force by left- and right-circularly polarized light), 
+        by optical trapping of the chiral gold nanoparticles.
+      </p>
+      <h4> Source: <a href="https://phys.org/news/2022-09-differentiating-right-left-handed-particles-exerted.html" target="_blank">  Phys.org </a></h4>
     </div>  
       
     <div class="gradient"></div>
