--- a/Projekt/pages/about.html
+++ b/Projekt/pages/about.html
@@ -62,7 +62,6 @@
     <!----------------------->
     <div class="anchor-tag">
       <a href="./home.html"><h4> Back to Home << </h4></a>
-      </div>
         <div class="about-video">
             <iframe 
                 width="1000" 
@@ -80,104 +79,26 @@
                 allowfullscreen>
             </iframe>
 
-          <p style="text-align: center;">These are some random glowing particles found on the interwebz</p>
+          <p style="text-align: center;">This is the basis for the underlying video of this webiste</p>
             <div class="gradient"></div>
         </div>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac
-            lectus et sapien dictum tincidunt quis nec augue. Vivamus pharetra
-            dui ac enim semper ultricies. Duis tristique odio ultricies arcu
-            tristique, ac efficitur erat tincidunt. Nunc venenatis ac ligula
-            aliquam malesuada. Nulla tincidunt hendrerit tincidunt.
-            Pellentesque habitant morbi tristique senectus et netus et
-            malesuada fames ac turpis egestas. Nulla non eros arcu. Sed
-            interdum est non enim consectetur convallis. Suspendisse sagittis
-            imperdiet velit, ac varius nisi. Proin congue orci nec nisi
-            tempor, at commodo leo tristique. Morbi vel est quis lacus
-            vulputate volutpat.
+            A liquid is a sample of matter that conforms to the shape of a container in which it is held, 
+            and which acquires a defined surface in the presence of gravity. The term liquid is also used 
+            in reference to the state, or condition, of matter having this property. The atom s or molecules 
+            of matter in the liquid state are compressed as tightly as those of matter in the solid state, 
+            but the atoms or molecules in a liquid can move freely among each other. Examples of liquids 
+            are water at room temperature (approximately 20 ºC or 68 ºF), oil at room temperature, and 
+            alcohol at room temperature. When a liquid is heated, the atoms or molecules gain kinetic energy. 
+            If the temperature becomes sufficiently high, the liquid becomes a gas , or it may react with 
+            chemicals in the environment. Water is an example of a liquid that becomes gaseous when it is 
+            heated gradually. Alcohol will combust (combined with oxygen in the atmosphere) if heated 
+            suddenly and dramatically. When a liquid is cooled, the atoms or molecules lose kinetic energy.
+            If the temperature becomes low enough, the liquid becomes a solid. Water is a good example. 
+            If cooled down, it freezes into ice.
           </p>
-          <p>
-            Nunc porttitor, sem quis interdum condimentum, diam arcu varius
-            nisl, in lacinia augue nisi tincidunt neque. Sed a mauris lacus.
-            Nulla facilisi. Aliquam venenatis sapien nisl, ut placerat ipsum
-            laoreet tristique. Aenean enim elit, pulvinar a ipsum non,
-            fringilla viverra sapien. In hendrerit quis sapien id commodo.
-            Orci varius natoque penatibus et magnis dis parturient montes,
-            nascetur ridiculus mus. Vivamus sagittis tempor nibh, venenatis
-            viverra tortor semper sed. Suspendisse potenti. Proin dui mi,
-            varius convallis risus vitae, lobortis dapibus ex. Suspendisse
-            luctus metus hendrerit felis iaculis varius. Orci varius natoque
-            penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-            Duis arcu orci, tempus vitae pharetra semper, ultricies quis
-            tellus. Cras commodo ultrices egestas. Maecenas a rhoncus nibh.
-            Suspendisse ante arcu, egestas in malesuada convallis, tristique
-            et ex. Aenean sodales varius lacinia. Vestibulum finibus tristique
-            libero, in suscipit ante iaculis nec. Curabitur faucibus ligula
-            sit amet aliquet ultrices. Donec eget mauris quis lacus eleifend
-            aliquam. Quisque quis nulla eget leo efficitur faucibus et in
-            massa. Cras ultrices feugiat urna.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac
-            lectus et sapien dictum tincidunt quis nec augue. Vivamus pharetra
-            dui ac enim semper ultricies. Duis tristique odio ultricies arcu
-            tristique, ac efficitur erat tincidunt. Nunc venenatis ac ligula
-            aliquam malesuada. Nulla tincidunt hendrerit tincidunt.
-            Pellentesque habitant morbi tristique senectus et netus et
-            malesuada fames ac turpis egestas. Nulla non eros arcu. Sed
-            interdum est non enim consectetur convallis. Suspendisse sagittis
-            imperdiet velit, ac varius nisi. Proin congue orci nec nisi
-            tempor, at commodo leo tristique. Morbi vel est quis lacus
-            vulputate volutpat. Sed et metus et diam maximus elementum. Aenean
-            egestas orci id porttitor porttitor. Integer eu mattis metus.
-            Vestibulum pharetra non lorem pulvinar auctor. Quisque metus
-            tortor, pharetra vitae consectetur a, vestibulum et ligula. Nulla
-            nec ante eget sem blandit finibus. Sed eu libero ut dui molestie
-            semper in ac tortor. Morbi ac velit eu purus convallis congue et
-            vel risus. Cras at nunc finibus, euismod erat vel, pulvinar
-            ligula. Aenean quis arcu massa.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac
-            lectus et sapien dictum tincidunt quis nec augue. Vivamus pharetra
-            dui ac enim semper ultricies. Duis tristique odio ultricies arcu
-            tristique, ac efficitur erat tincidunt. Nunc venenatis ac ligula
-            aliquam malesuada. Nulla tincidunt hendrerit tincidunt.
-            Pellentesque habitant morbi tristique senectus et netus et
-            malesuada fames ac turpis egestas. Nulla non eros arcu. Sed
-            interdum est non enim consectetur convallis. Suspendisse sagittis
-            imperdiet velit, ac varius nisi. Proin congue orci nec nisi
-            tempor, at commodo leo tristique. Morbi vel est quis lacus
-            vulputate volutpat. Sed et metus et diam maximus elementum. Aenean
-            egestas orci id porttitor porttitor. Integer eu mattis metus.
-            Vestibulum pharetra non lorem pulvinar auctor. Quisque metus
-            tortor, pharetra vitae consectetur a, vestibulum et ligula. Nulla
-            nec ante eget sem blandit finibus. Sed eu libero ut dui molestie
-            semper in ac tortor. Morbi ac velit eu purus convallis congue et
-            vel risus. Cras at nunc finibus, euismod erat vel, pulvinar
-            ligula. Aenean quis arcu massa.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac
-            lectus et sapien dictum tincidunt quis nec augue. Vivamus pharetra
-            dui ac enim semper ultricies. Duis tristique odio ultricies arcu
-            tristique, ac efficitur erat tincidunt. Nunc venenatis ac ligula
-            aliquam malesuada. Nulla tincidunt hendrerit tincidunt.
-            Pellentesque habitant morbi tristique senectus et netus et
-            malesuada fames ac turpis egestas. Nulla non eros arcu. Sed
-            interdum est non enim consectetur convallis. Suspendisse sagittis
-            imperdiet velit, ac varius nisi. Proin congue orci nec nisi
-            tempor, at commodo leo tristique. Morbi vel est quis lacus
-            vulputate volutpat. Sed et metus et diam maximus elementum. Aenean
-            egestas orci id porttitor porttitor. Integer eu mattis metus.
-            Vestibulum pharetra non lorem pulvinar auctor. Quisque metus
-            tortor, pharetra vitae consectetur a, vestibulum et ligula. Nulla
-            nec ante eget sem blandit finibus. Sed eu libero ut dui molestie
-            semper in ac tortor. Morbi ac velit eu purus convallis congue et
-            vel risus. Cras at nunc finibus, euismod erat vel, pulvinar
-            ligula. Aenean quis arcu massa.
-          </p>
-    </div>
+            <h4> Source: <a href="https://www.techtarget.com/whatis/definition/liquid" target="_blank">  WhatIs.com </a></h4>   
+        </div>
     <div class="gradient"></div>
     <!----------------------->
     <!--------Footer--------->
