--- a/Projekt/pages/news.html
+++ b/Projekt/pages/news.html
@@ -72,18 +72,17 @@
             <a 
               href="../news-pages/news-1.html" 
               >
-              <h3>News from the world 1</h3>
+              <h3>Scientists combine existing technologies to build new ultrafast electron microscope</h3>
             </a>
             <p>
-              Nunc porttitor, sem quis interdum condimentum, diam arcu varius
-              nisl, in lacinia augue nisi tincidunt neque. Sed a mauris lacus.
-              Nulla facilisi. Aliquam... 
+              Using a unique combination technology, a team of researchers 
+              from Nagoya University in Japan has analyzed the mechanisms... 
               <a 
                 href="../news-pages/news-1.html"
                 >[ More... ]
               </a>
             </p>
-            <p style="font-weight: bold;">Date: 10.01.2020.</p>
+            <p style="font-weight: bold;">Date: Nov 08, 2022</p>
           </div>
         </div>  
         <div class="gradient2"></div>
@@ -96,18 +95,19 @@
           <a 
             href="../news-pages/news-2.html" 
             >
-            <h3>News from the world 2</h3>
+            <h3>Differentiating right- and left-handed particles 
+              using the force exerted by light</h3>
           </a>
           <p>
-            Aenean sodales varius lacinia. Vestibulum finibus tristique
-            libero, in suscipit ante iaculis nec. Curabitur faucibus ligula
-            sit amet aliquet ultrices...
+            Researchers investigated the polarization-dependence of 
+            the force exerted by circularly polarized light (CPL) 
+            by performing optical trapping of chiral nanoparticles.
             <a 
               href="../news-pages/news-2.html"
               >[ More... ]
             </a>
           </p>
-          <p style="font-weight: bold;">Date: 10.11.2010.</p>
+          <p style="font-weight: bold;">Date: Sep 21, 2022</p>
         </div>
       </div>  
       <div class="gradient2"></div>
@@ -120,16 +120,17 @@
         <a 
           href="../news-pages/news-3.html" 
           >
-          <h3>News from the world 3</h3>
+          <h3>Bacterial vesicles coated on gold nanoparticles to combat TB</h3>
         </a>
         <p>
-          Curabitur faucibus ligula sit amet aliquet ultrices...
+          Researchers from the Indian Institute of Science (IISc) have designed 
+          a new method to deliver a vaccine candidate for tuberculosis (TB).
           <a 
             href="../news-pages/news-3.html"
             >[ More... ]
           </a>
         </p>
-        <p style="font-weight: bold;">Date: 12.05.2000.</p>
+        <p style="font-weight: bold;">Date: Sep 14, 2022</p>
       </div>
     </div>  
     <div class="gradient2"></div>
