--- a/Projekt/news-pages/news-1.html
+++ b/Projekt/news-pages/news-1.html
@@ -65,46 +65,33 @@
       <div class="news-content">
           <div class="news-picture">
             <img src="../assets/news-gifs/news-1.gif" />
-            <p>This is a description</p>
+            <p>Representation of gold</p>
           </div>
       </div>
 
-      <h2>News from the world 1</h2>  
+      <h2>Scientists combine existing technologies to build new ultrafast electron microscope</h2>  
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac
-        lectus et sapien dictum tincidunt quis nec augue. Vivamus pharetra
-        dui ac enim semper ultricies. Duis tristique odio ultricies arcu
-        tristique, ac efficitur erat tincidunt. Nunc venenatis ac ligula
-        aliquam malesuada. Nulla tincidunt hendrerit tincidunt.
-        Pellentesque habitant morbi tristique senectus et netus et
-        malesuada fames ac turpis egestas. Nulla non eros arcu. Sed
-        interdum est non enim consectetur convallis. Suspendisse sagittis
-        imperdiet velit, ac varius nisi. Proin congue orci nec nisi
-        tempor, at commodo leo tristique. Morbi vel est quis lacus
-        vulputate volutpat.
+        Using a unique combination technology, a team of researchers 
+        from Nagoya University in Japan has analyzed the mechanisms of 
+        the light-matter interaction in nanomaterials at the smallest and fastest levels.
       </p>
       <p>
-        Nunc porttitor, sem quis interdum condimentum, diam arcu varius
-        nisl, in lacinia augue nisi tincidunt neque. Sed a mauris lacus.
-        Nulla facilisi. Aliquam venenatis sapien nisl, ut placerat ipsum
-        laoreet tristique. Aenean enim elit, pulvinar a ipsum non,
-        fringilla viverra sapien. In hendrerit quis sapien id commodo.
-        Orci varius natoque penatibus et magnis dis parturient montes,
-        nascetur ridiculus mus. Vivamus sagittis tempor nibh, venenatis
-        viverra tortor semper sed. Suspendisse potenti. Proin dui mi,
-        varius convallis risus vitae, lobortis dapibus ex. Suspendisse
-        luctus metus hendrerit felis iaculis varius. Orci varius natoque
-        penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-        Duis arcu orci, tempus vitae pharetra semper, ultricies quis
-        tellus. Cras commodo ultrices egestas. Maecenas a rhoncus nibh.
-        Suspendisse ante arcu, egestas in malesuada convallis, tristique
-        et ex. Aenean sodales varius lacinia. Vestibulum finibus tristique
-        libero, in suscipit ante iaculis nec. Curabitur faucibus ligula
-        sit amet aliquet ultrices. Donec eget mauris quis lacus eleifend
-        aliquam. Quisque quis nulla eget leo efficitur faucibus et in
-        massa. Cras ultrices feugiat urna.
+        Nanomaterials, materials sized at the nanoscale between 1 and 100 nm, are increasingly 
+        important in both industry and everyday living. Their extraordinarily small size gives 
+        them unique properties not found in larger materials. These properties are also specific to 
+        the nature and environment of the material. To expand the library of nanomaterials that can 
+        be applied effectively, safely, and sustainably in products and manufacturing processes, 
+        we require a deeper understanding of even the smallest events occurring on and inside the nanoparticles.
       </p>
-      <h4> Source: <a href="../index.html">  Liquid Solutions </a></h4>
+      <p>
+        To measure nanomaterials, scientists use a subfield of metrology known as nanometrology. 
+        Nanometrology measures length scales at the nanoscale. To give this some context, a human hair is about 100,000 times wider. 
+        When particles are this small, scientists must also measure events that occur within mere fractions of a second. 
+        For example, a phenomenon called photoexcitation normally takes place in picoseconds, 
+        or one trillionth of a second. Specialized devices, therefore, are necessary 
+        to measure these almost instantaneous events.
+      </p>
+      <h4> Source: <a href="https://phys.org/news/2022-11-scientists-combine-technologies-ultrafast-electron.html" target="_blank">  Phys.org </a></h4>
     </div>  
       
     <div class="gradient"></div>
