--- a/Projekt/news-pages/news-3.html
+++ b/Projekt/news-pages/news-3.html
@@ -65,75 +65,48 @@
       <div class="news-content">
           <div class="news-picture">
             <img src="../assets/news-gifs/news-1.gif" />
-            <p>This is a description</p>
+            <p>This is a gold gif</p>
           </div>
           <div class="news-picture">
             <img src="../assets/news-gifs/news-2.gif" />
-            <p>This is a description</p>
+            <p>This is another gold gif</p>
           </div>
           <div class="news-picture">
             <img src="../assets/news-gifs/news-3.gif" />
-            <p>This is a description</p>
+            <p>And another gold gif</p>
           </div>
       </div>
 
-      <h2>News from the world 3</h2>  
+      <h2>Bacterial vesicles coated on gold nanoparticles to combat TB</h2>  
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac
-        lectus et sapien dictum tincidunt quis nec augue. Vivamus pharetra
-        dui ac enim semper ultricies. Duis tristique odio ultricies arcu
-        tristique, ac efficitur erat tincidunt. Nunc venenatis ac ligula
-        aliquam malesuada. Nulla tincidunt hendrerit tincidunt.
-        Pellentesque habitant morbi tristique senectus et netus et
-        malesuada fames ac turpis egestas. Nulla non eros arcu. Sed
-        interdum est non enim consectetur convallis. Suspendisse sagittis
-        imperdiet velit, ac varius nisi. Proin congue orci nec nisi
-        tempor, at commodo leo tristique. Morbi vel est quis lacus
-        vulputate volutpat.
+        Researchers from the Indian Institute of Science (IISc) have 
+        designed a new method to deliver a vaccine candidate for tuberculosis (TB). 
+        It involves using spherical vesicles secreted by bacteria coated on 
+        gold nanoparticles which can then be delivered to immune cells. 
+        This can potentially trigger an immune response and offer protection 
+        against the disease.
       </p>
       <p>
-        Nunc porttitor, sem quis interdum condimentum, diam arcu varius
-        nisl, in lacinia augue nisi tincidunt neque. Sed a mauris lacus.
-        Nulla facilisi. Aliquam venenatis sapien nisl, ut placerat ipsum
-        laoreet tristique. Aenean enim elit, pulvinar a ipsum non,
-        fringilla viverra sapien. In hendrerit quis sapien id commodo.
-        Orci varius natoque penatibus et magnis dis parturient montes,
-        nascetur ridiculus mus. Vivamus sagittis tempor nibh, venenatis
-        viverra tortor semper sed. Suspendisse potenti. Proin dui mi,
-        varius convallis risus vitae, lobortis dapibus ex. Suspendisse
-        luctus metus hendrerit felis iaculis varius. Orci varius natoque
-        penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-        Duis arcu orci, tempus vitae pharetra semper, ultricies quis
-        tellus. Cras commodo ultrices egestas. Maecenas a rhoncus nibh.
-        Suspendisse ante arcu, egestas in malesuada convallis, tristique
-        et ex. Aenean sodales varius lacinia. Vestibulum finibus tristique
-        libero, in suscipit ante iaculis nec. Curabitur faucibus ligula
-        sit amet aliquet ultrices. Donec eget mauris quis lacus eleifend
-        aliquam. Quisque quis nulla eget leo efficitur faucibus et in
-        massa. Cras ultrices feugiat urna.
+        Caused by the bacterium Mycobacterium tuberculosis, TB kills over a 
+        million people worldwide every year. The only effective vaccine currently 
+        in use is the BCG vaccine. It contains a weakened form of the disease-causing bacterium. 
+        When injected into our bloodstream, it triggers the production of 
+        antibodies that can help fight the disease. While the BCG vaccine works well 
+        in children, it is not as effective at protecting adolescents and adults. 
+        This prompted Rachit Agarwal, Assistant Professor at the Center for BioSystems 
+        Science and Engineering (BSSE), IISc, and his group to develop a potential 
+        subunit vaccine candidate that contains only parts of the infectious 
+        bacterium to stimulate an immune response.
       </p>
       <p>
-        Nunc porttitor, sem quis interdum condimentum, diam arcu varius
-        nisl, in lacinia augue nisi tincidunt neque. Sed a mauris lacus.
-        Nulla facilisi. Aliquam venenatis sapien nisl, ut placerat ipsum
-        laoreet tristique. Aenean enim elit, pulvinar a ipsum non,
-        fringilla viverra sapien. In hendrerit quis sapien id commodo.
-        Orci varius natoque penatibus et magnis dis parturient montes,
-        nascetur ridiculus mus. Vivamus sagittis tempor nibh, venenatis
-        viverra tortor semper sed. Suspendisse potenti. Proin dui mi,
-        varius convallis risus vitae, lobortis dapibus ex. Suspendisse
-        luctus metus hendrerit felis iaculis varius. Orci varius natoque
-        penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-        Duis arcu orci, tempus vitae pharetra semper, ultricies quis
-        tellus. Cras commodo ultrices egestas. Maecenas a rhoncus nibh.
-        Suspendisse ante arcu, egestas in malesuada convallis, tristique
-        et ex. Aenean sodales varius lacinia. Vestibulum finibus tristique
-        libero, in suscipit ante iaculis nec. Curabitur faucibus ligula
-        sit amet aliquet ultrices. Donec eget mauris quis lacus eleifend
-        aliquam. Quisque quis nulla eget leo efficitur faucibus et in
-        massa. Cras ultrices feugiat urna.
+        Scientists have earlier developed subunit vaccines based on just a handful 
+        of proteins from the disease-causing bacteria, but none of them have been effective 
+        so far. Instead, Agarwal's group decided to use Outer Membrane Vesicles (OMVs). 
+        OMVs are spherical membrane-bound particles released by some bacteria, 
+        and contain an assortment of proteins and lipids which could induce an immune 
+        response against the pathogen.
       </p>
-      <h4> Source: <a href="../index.html">  Liquid Solutions </a></h4>        
+      <h4> Source: <a href="https://phys.org/news/2022-09-bacterial-vesicles-coated-gold-nanoparticles.html" target="_blank">  Phys.org </a></h4>        
   </div>      
       
     <div class="gradient"></div>
