added the gallery descriptions

--- a/Projekt/pages/gallery.html
+++ b/Projekt/pages/gallery.html
@@ -65,43 +65,43 @@
         <div class="gallery-content">
             <div class="news-picture">
               <img src="../assets/news-gifs/news-1.gif" />
-              <p>This is a description</p>
+              <p>This is falling golden gif</p>
             </div>
             <div class="news-picture">
               <img src="../assets/news-gifs/news-2.gif" />
-              <p>This is a description</p>
+              <p>This is a golden mist gif</p>
             </div>
             <div class="news-picture">
               <img src="../assets/news-gifs/news-3.gif" />
-              <p>This is a description</p>
+              <p>This is a digging gold gif</p>
             </div>
             <div class="news-picture">
                 <img src="../assets/news-gifs/news-1.gif" />
-                <p>This is a description</p>
+                <p>This is falling golden gif</p>
               </div>
               <div class="news-picture">
                 <img src="../assets/news-gifs/news-2.gif" />
-                <p>This is a description</p>
+                <p>This is a golden mist gif</p>
               </div>
               <div class="news-picture">
                 <img src="../assets/news-gifs/news-3.gif" />
-                <p>This is a description</p>
+                <p>This is a digging gold gif</p>
               </div>
               <div class="news-picture">
                 <img src="../assets/news-gifs/news-1.gif" />
-                <p>This is a description</p>
+                <p>This is falling golden gif</p>
               </div>
               <div class="news-picture">
                 <img src="../assets/news-gifs/news-2.gif" />
-                <p>This is a description</p>
+                <p>This is a golden mist gif</p>
               </div>
               <div class="news-picture">
                 <img src="../assets/news-gifs/news-3.gif" />
-                <p>This is a description</p>
+                <p>This is a digging gold gif</p>
               </div>
               <div class="news-picture">
                 <img src="../assets/news-gifs/news-1.gif" />
-                <p>This is a description</p>
+                <p>This is falling golden gif</p>
               </div>
         </div>
 
