--- a/Projekt/pages/news.html
+++ b/Projekt/pages/news.html
@@ -100,8 +100,7 @@
           </a>
           <p>
             Researchers investigated the polarization-dependence of 
-            the force exerted by circularly polarized light (CPL) 
-            by performing optical trapping of chiral nanoparticles.
+            the force exerted by circularly polarized light (CPL)...
             <a 
               href="../news-pages/news-2.html"
               >[ More... ]
